2007-05-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Added $GLOBALS['TYPO3_DB']->sql_free_result() to TCEmain::recordInfo() to avoid resource waste

2007-05-01  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5578: config setting SYS[requestURIvar] doesn't work

2007-05-12  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5074: IRRE - Hook processDatamap_afterDatabaseOperations executed early

2007-05-10  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* fixed bug #209: require field URL in page-type "External URL"

2007-05-09  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #2052: Color picker does not work properly in flex forms. Thanks to David Bruehlmeier for providing a patch and a testcase.

2007-05-03  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5177: RTEhtmlarea not correctly displayed in IRRE child form-fields and tabs

2007-05-01  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #2515: jsfunc.validateform.js does not verify password fields (thanks to Joerg Wagner)
	* Fixed bug #5522: 1-2-3 wizard does not accept host name with socket option

2007-04-28  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #3649: Call to a member function formWidth() on object $GLOBALS['TBE_TEMPLATE'] instead on $GLOBALS['SOBE'].

2007-04-28  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5519: EM - Some input fields don't have real labels yet (thanks to Oliver Klee)

2007-04-28  Michael Stucki  <michael@typo3.org>

	* Fixed bug in TypoScript object browser: New keys were not added when pressing the return key in the update form instead of clicking the submit button.
	* Fixed bug in class.em_terconnection.php: Need to base64_encode upload data for some NuSOAP implementations (patch by Karsten Dambekalns)

2007-04-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #1839: Broken Rootline when a Editor view a Page that is not online

2007-04-18  Ernesto Baschny  <ernst@cron-it.de>
