@@ -1,3 +1,7 @@
+2007-05-23  Oliver Hader  <oh@inpublica.de>
+
+	* Fixed bug #5564: IRRE - foreign_selector/foreign_unique on click issue
+
 2007-05-04  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added $GLOBALS['TYPO3_DB']->sql_free_result() to TCEmain::recordInfo() to avoid resource waste
